# wdwyl_ros1

./: .gitignore  CMakeLists.txt  README.md  dashboard demo  et --hard HEAD~2  package.xml  setup.py
manipulation/: CMakeLists.txt  package.xml  setup.py
manipulation/cfg/: ur3e_bsb_calibration.yaml  ur3e_with_rg2_rviz_config.rviz
manipulation/launch/: gripper_sensor.launch  sensor_drivers.launch
manipulation/scripts/: finding_nemo.py  ur3e_control_node.py
manipulation/src/ur3e_controller/: UR3e.py  collision_manager.py  utility.py
manipulation/ur3e_controller/: UR3e.py
manipulation/urdf/: onrobot_rg2.xacro  onrobot_rg2_model_macro.xacro  ur3e_with_rg2.xacro  ur3e_with_rg2_with_trolley.urdf
perception/: CMakeLists.txt  README.md  package.xml  setup.py
perception/brand_classification/: README.md
perception/brand_classification/model_factored/: model_generation.ipynb  model_testing.ipynb
perception/brand_classification/model_old/: model_generation.ipynb
perception/brand_classification/model_using_pretrained/: model_testing.ipynb  model_testing_new.ipynb  resnet_9_model.py
perception/brand_classification/model_using_pretrained_v4/: ipynew.py  model_generation_with_kfold.ipynb  model_generation_with_random_split.ipynb  model_testing.ipynb
perception/classification_2/: classification_real_time.py
perception/detection/: localizer_model.py  trained_model_test.py
perception/lstm/: README.md  train.ipynb
perception/lstm/data/: dataset.py
perception/lstm/data/sequence_npy/: sequence_IMG_1745.npy  sequence_IMG_1749.npy
perception/lstm/data_synthesise/: all_synthetic_data_20_x1000.npz  all_synthetic_data_20_x200.npz  data_synthesiser.py
perception/scripts/brand_classification/model_factored/: model_testing_specific.py  (+1 more)
perception/scripts/detection/: README.md  image_processing_before_training.py  real_time_detect_using_model.py
perception/src/classification/: __init__.py  classification_real_time.py
perception/src/detection/: __init__.py  detect_bottle_using_image_processing.py
wdwyl_ros1/: CMakeLists.txt  package.xml
(+102 files in other folders)
