<?xml version="1.0"?>
<package format="2">
  <name>manipulation</name>
  <version>0.0.0</version>
  <description>The manipulation package</description>

  <maintainer email="tu.anhminh1203@gmail.com">Anh Minh Tu</maintainer>
  
  <license>TODO</license>

  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>