<?xml version="1.0"?>
<package format="2">
  <name>wdwyl_ros1</name>
  <version>0.0.0</version>
  <description>The wdwyl_ros1 package</description>

  <maintainer email="tu.anhminh1203@gmail.com">Anh Minh Tu</maintainer>
  <maintainer email="AnhTung.Nguyen@student.uts.edu.au">Anh Tung Nguyen</maintainer>
  <maintainer email="Quan.Vu@uts.edu.au">Minh Quan Vu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>manipulation</exec_depend>
  <exec_depend>perception</exec_depend>
  <exec_depend>dashboard</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
